--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title:Welcome
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>{{ page.title }}</title>
+<title>首页</title>
 </head>
 <body>
-{{ content }}
+你好，欢迎来到晓晗之家
 </body>
 </html>
