Update and rename createCase.html to 2016-01-18-createCase.html

--- a/_posts/2016-01-18-createCase.html
+++ b/_posts/2016-01-18-createCase.html
@@ -1,15 +1,8 @@
 ---
 layout: post
-title:  "创建case"
-date:   2015-11-15 16:57:51
+title:  "创建服务请求"
+date:   2016-01-18 16:57:51
 ---
-
-<!--  ----------------------------------------------------------------------  -->
-<!--  注意：请将以下 <META> 元素添加到您的网页 <HEAD> 中。如有必要，请修改 charset 参数以指定 HTML 页的字符集。    -->
-<!--  ----------------------------------------------------------------------  -->
-
-<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
-
 <!--  ----------------------------------------------------------------------  -->
 <!--  注意：请将以下 <FORM> 元素添加到您的网页中。                                              -->
 <!--  ----------------------------------------------------------------------  -->
@@ -17,7 +10,7 @@ date:   2015-11-15 16:57:51
 <form action="https://cs5.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
 <input type=hidden name="orgid" value="00DO000000536oo">
-<input type=hidden name="retURL" value="http://taste.com">
+<input type=hidden name="retURL" value="http://yinxiaohan.top/">
 
 <!--  ----------------------------------------------------------------------  -->
 <!--  注意：这些字段是可选的调试元素。如果希望在调试模式下进行测试，请取消这些行的留言。                               -->
@@ -53,6 +46,6 @@ date:   2015-11-15 16:57:51
 
 请求内容:<textarea  id="00NO00000021wVv" name="00NO00000021wVv" rows="3" type="text" wrap="soft"></textarea><br>
 
-<input type="submit" name="submit">
+<input type="submit" name="提交">
 
 </form>
