Update and rename 2016-01-18-createCase.html to 2016-01-22-createCase1.html

--- a/_posts/2016-01-22-createCase1.html
+++ b/_posts/2016-01-22-createCase1.html
@@ -1,16 +1,17 @@
 ---
 layout: post
-title:  "创建服务请求"
+title:  "创建服务请求-官网"
 date:   2016-01-18 16:57:51
 ---
 <!--  ----------------------------------------------------------------------  -->
 <!--  注意：请将以下 <FORM> 元素添加到您的网页中。                                              -->
 <!--  ----------------------------------------------------------------------  -->
 
+
 <form action="https://cs5.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
 <input type=hidden name="orgid" value="00DO000000536oo">
-<input type=hidden name="retURL" value="http://yinxiaohan.top/">
+<input type=hidden name="retURL" value="http://yinxiaohan.top">
 
 <!--  ----------------------------------------------------------------------  -->
 <!--  注意：这些字段是可选的调试元素。如果希望在调试模式下进行测试，请取消这些行的留言。                               -->
@@ -29,7 +30,14 @@ date:   2016-01-18 16:57:51
 
 <label for="description">描述</label><textarea name="description"></textarea><br>
 
-<label for="status">状态</label><select  id="status" name="status"><option value="">--无--</option><option value="新建">新建</option>
+<label for="company">公司</label><input  id="company" maxlength="80" name="company" size="20" type="text" /><br>
+
+<label for="type">类型</label><select  id="type" name="type"><option value="">--无--</option><option value="投诉">投诉</option>
+<option value="咨询">咨询</option>
+<option value="其他">其他</option>
+</select><br>
+
+<label for="status" style="display:none;">状态</label><select  id="status" name="status" style="display:none;"><option value="">--无--</option><option value="新建">新建</option>
 <option value="处理中">处理中</option>
 <option value="待审核">待审核</option>
 <option value="审核通过">审核通过</option>
@@ -37,15 +45,31 @@ date:   2016-01-18 16:57:51
 <option value="已关闭">已关闭</option>
 </select><br>
 
-<label for="reason">个案原因</label><select  id="reason" name="reason"><option value="">--无--</option><option value="User didn&#39;t attend training">User didn&#39;t attend training</option>
-<option value="Complex functionality">Complex functionality</option>
-<option value="Existing problem">Existing problem</option>
-<option value="Instructions not clear">Instructions not clear</option>
-<option value="New problem">New problem</option>
-</select><br>
-
 请求内容:<textarea  id="00NO00000021wVv" name="00NO00000021wVv" rows="3" type="text" wrap="soft"></textarea><br>
 
-<input type="submit" name="提交">
+不纳入考核原因:<textarea  id="00NO00000022kYV" name="00NO00000022kYV" type="text" wrap="soft"></textarea><br>
+
+备注车系:<select  id="00NO00000022kfW" name="00NO00000022kfW" title="备注车系"><option value="">--无--</option><option value="DX7">DX7</option>
+</select><br>
+
+客诉类型:<select  id="00NO00000022lZP" name="00NO00000022lZP" title="客诉类型"><option value="">--无--</option><option value="大客户">大客户</option>
+<option value="DX7投诉">DX7投诉</option>
+<option value="媒体曝光">媒体曝光</option>
+</select><br>
+
+来电号码:<input  id="00NO00000022oBL" maxlength="40" name="00NO00000022oBL" size="20" type="text" /><br>
+
+被投诉员工:<input  id="00NO00000022vW6" maxlength="255" name="00NO00000022vW6" size="20" type="text" /><br>
+
+*集成来源:<select  id="00NO000000236qH" name="00NO000000236qH" title="*集成来源" style="display:none;">
+<option value="" >--无--</option>
+<option value="官网" selected = "selected">官网</option>
+<option value="移动APP">移动APP</option>
+<option value="微信">微信</option>
+</select><br>
+
+<input type="submit" name="submit">
 
 </form>
+
+
